@@ -34,6 +34,7 @@ mv
 cmp
 mkdir
 mknod
+hostname
 
 # Images
 MINIBOX.png
